--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "material-ui-image": "^3.3.2",
     "material-ui-nested-menu-item": "^1.0.2",
     "next": "10.1.3",
     "prop-types": "^15.7.2",
