--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "10.1.3",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6"
   }
 }
