--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "material-ui-image": "^3.3.2",
     "material-ui-nested-menu-item": "^1.0.2",
     "next": "10.1.3",
+    "node-mocks-http": "^1.10.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^0.5.6"
   },
-    "engines": {
+  "engines": {
     "node": "15.3.0"
   }
 }
