--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "material-ui-image": "^3.3.2",
     "material-ui-nested-menu-item": "^1.0.2",
-    "next": "11.1.1",
+    "next": ">=12.1.0",
     "node-mocks-http": "^1.10.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
